[tool.poetry]
name = "pytsa"
version = "2.0.1"
description = "Toolbox for decoding and processing AIS Messages."
authors = [
    "Niklas Paulig <niklas.paulig@tu-dresden.de>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"    
sentinel = "*"
numpy = "^1.19"
matplotlib = "^3.5.3"
ciso8601 = "*"
geopandas = "^0.10.2"
pandas = "^1.3.4"
scipy = "^1.7.1"
utm  = "^0.7.0"

# [tool.poetry.scripts]
# persist = "persist.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
