[tool.poetry]
name = "pytsa-ais"
version = "2.1.0"
description = "Toolbox for extracting trajectories and monitoring vessels from raw AIS records."
authors = ["Niklas Paulig <niklas.paulig@tu-dresden.de>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
readme = "README.md"
packages = [{include = "pytsa"}]

[project.urls]
Homepage = "https://github.com/nikpau/pytsa"
Issues = "https://github.com/nikpau/pytsa/issues"

[tool.poetry.dependencies]
python = "^3.10"    
sentinel = "*"
numpy = "^1.19"
matplotlib = "^3.5.3"
ciso8601 = "*"
geopandas = "^0.10.2"
pandas = "^1.3.4"
scipy = "^1.7.1"
utm  = "^0.7.0"
vincenty = "^0.1.4"

[tool.setuptools.package-data]
"pytsa.data.geometry" = ["*.json"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
