[build-system]
requires = ["maturin>=0.12", "setuptools"]
build-backend = "maturin"

[project]
name = "pytsa-ais"
version = "2.3.14"
requires-python = ">=3.10"
description = "Toolbox for extracting trajectories and monitoring vessels from raw AIS records."
authors = [
  {email = "niklas.paulig@tu-dresden.de"},
  {name = "Niklas Paulig"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
readme = "README.md"

dependencies = [
    "sentinel >=1.0.0",
    "pyais >=2.6.2",
    "numpy >=1.19",
    "matplotlib >=3.5.3",
    "ciso8601 >=2.3.1",
    "geopandas >=0.10.2",
    "pandas >=1.3.4",
    "scipy >=1.7.1",
    "utm >= 0.7.0",
    "vincenty >=0.1.4",
    "tomli >=2.0.1",
    "osm2geojson >=0.2.5"
]

[project.urls]
homepage = "https://github.com/nikpau/pytsa"
issues = "https://github.com/nikpau/pytsa/issues"

[tool.setuptools.package-data]
"pytsa.data.geometry" = ["*.json"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pytsa._pytsa_compiled"