[metadata]
name = pytsa
version = 1.0.1
author = Niklas Paulig
author_email = niklas.paulig@tu-dresden.de
description = Target ship search agent and trajectory interpolation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikpau/pytsa 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[project]
install_requires=
    numpy >= 1.19,
    matplotlib >= 3.5.3,
    ciso8601,
    geopandas,
    pandas,
    glob,
    scipy

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src